--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   </head>
   <body>
     <canvas></canvas>
+    <script src="./js/classes/Collisions.js"></script>
+    <script src="./js/classes/Sprite.js"></script>
+    <script src="./js/classes/Player.js"></script>
+    <script src="./js/data/Collisions.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
