--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   </head>
   <body>
     <canvas></canvas>
-    <script src="./js/classes/Collisions.js"></script>
+    <script src="./js/utils.js"></script>
+    <script src="./js/classes/CollisionsBlock.js"></script>
     <script src="./js/classes/Sprite.js"></script>
     <script src="./js/classes/Player.js"></script>
     <script src="./js/data/Collisions.js"></script>
