--- a/index.html
+++ b/index.html
@@ -4,19 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- <link rel="stylesheet" href="styles.css" /> -->
     <style>
       body {
-        background: black;
+        /* background: black; */
       }
     </style>
   </head>
   <body>
+    <!-- <div id="menu" class="menu">
+      <img src="your_image_url" alt="Menu Image" class="menu-image" />
+      <ul class="menu-items">
+        <li id="gameMenuItem" class="menu-item">Игра</li>
+        <li id="settingsMenuItem" class="menu-item">Настройки</li>
+        <li id="historyMenuItem" class="menu-item">История</li>
+      </ul>
+    </div> -->
+
     <canvas></canvas>
+
     <script src="./js/utils.js"></script>
     <script src="./js/classes/CollisionBlock.js"></script>
     <script src="./js/classes/Sprite.js"></script>
     <script src="./js/classes/Player.js"></script>
     <script src="./js/data/Collisions.js"></script>
     <script src="index.js"></script>
+    <!-- <script src="./js/data/menu.js" type="module"></script> -->
   </body>
 </html>
