--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script src="./js/classes/CollisionBlock.js"></script>
     <script src="./js/classes/Sprite.js"></script>
     <script src="./js/classes/Player.js"></script>
+    <script src="./js/classes/Enemy.js"></script>
     <script src="./js/classes/AppleManager.js"></script>
     <script src="./js/classes/GameUI.js"></script>
     <script src="./js/data/Collisions.js"></script>
