--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- <div id="menu" class="menu">
+    <div id="menu" class="menu">
       <img src="your_image_url" alt="Menu Image" class="menu-image" />
       <ul class="menu-items">
         <li id="gameMenuItem" class="menu-item">Игра</li>
         <li id="settingsMenuItem" class="menu-item">Настройки</li>
         <li id="historyMenuItem" class="menu-item">История</li>
       </ul>
-    </div> -->
+    </div>
     <!-- Модальное окно для сброса игры -->
     <div id="gameOverModal" class="modal">
       <div class="modal-content">
@@ -36,6 +36,6 @@
     <script src="./js/data/Collisions.js"></script>
     <script src="index.js"></script>
 
-    <!-- <script src="./js/menu.js" type="module"></script> -->
+    <script src="./js/Main.js" type="module"></script>
   </body>
 </html>
