--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <script src="./js/classes/GameUI.js"></script>
     <script src="./js/data/Collisions.js"></script>
     <script src="index.js"></script>
+    <script src="./js/Main.js"></script>
 
-    <script src="./js/Main.js" type="module"></script>
+    <!-- <script src="./js/Main.js" type="module"></script> -->
   </body>
 </html>
