--- a/index.html
+++ b/index.html
@@ -7,23 +7,6 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <div id="menu" class="menu">
-      <img src="your_image_url" alt="Menu Image" class="menu-image" />
-      <ul class="menu-items">
-        <li id="gameMenuItem" class="menu-item">Игра</li>
-        <li id="settingsMenuItem" class="menu-item">Настройки</li>
-        <li id="historyMenuItem" class="menu-item">История</li>
-      </ul>
-    </div>
-    <!-- Модальное окно для сброса игры -->
-    <div id="gameOverModal" class="modal">
-      <div class="modal-content">
-        <h2>Game Over</h2>
-        <p>Прадул</p>
-        <button id="restartButton">Перезапуск игры</button>
-      </div>
-    </div>
-
     <canvas></canvas>
 
     <script src="./js/utils.js"></script>
@@ -35,8 +18,6 @@
     <script src="./js/classes/GameUI.js"></script>
     <script src="./js/data/Collisions.js"></script>
     <script src="index.js"></script>
-    <script src="./js/Main.js"></script>
-
-    <!-- <script src="./js/Main.js" type="module"></script> -->
+    <script src="./js/start.js"></script>
   </body>
 </html>
