--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Firebase test document</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <div id="app"></div>
     <canvas></canvas>
 
+    <script src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/9.10.0/firebase-app-compat.js"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/9.10.0/firebase-database-compat.js"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/9.10.0/firebase-auth-compat.js"></script>
+    <script defer src="./js/firebase.js"></script>
+    <script defer src="./js/main.js"></script>
     <script src="./js/utils.js"></script>
     <script src="./js/classes/CollisionBlock.js"></script>
     <script src="./js/classes/Sprite.js"></script>
@@ -18,6 +27,6 @@
     <script src="./js/classes/GameUI.js"></script>
     <script src="./js/data/Collisions.js"></script>
     <script src="index.js"></script>
-    <script src="./js/start.js"></script>
+    <!-- <script src="./js/start.js"></script> -->
   </body>
 </html>
