--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <script defer src="https://www.gstatic.com/firebasejs/9.10.0/firebase-app-compat.js"></script>
     <script defer src="https://www.gstatic.com/firebasejs/9.10.0/firebase-database-compat.js"></script>
     <script defer src="https://www.gstatic.com/firebasejs/9.10.0/firebase-auth-compat.js"></script>
-    <script defer src="./js/firebase.js"></script>
-    <script defer src="./js/main.js"></script>
+    <!-- <script defer src="./js/firebase.js"></script>
+    <script defer src="./js/main.js"></script> -->
     <script src="./js/utils.js"></script>
     <script src="./js/classes/CollisionBlock.js"></script>
     <script src="./js/classes/Sprite.js"></script>
