--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
     <script src="./js/classes/GameUI.js"></script>
     <script src="./js/data/Collisions.js"></script>
     <script src="index.js"></script>
-    <script src="./js/authorization/login.js" defer></script>
+    <!-- <script src="./js/authorization/login.js" defer></script>
+    <script src="./js/authorization/registration.js" defer></script>
     <script src="./js/authorization/user.js" defer></script>
-    <script src="./js/authorization/app.js" defer></script>
+    <script src="./js/authorization/menu.js" defer></script>
+    <script src="./js/authorization/app.js" defer></script> -->
   </body>
 </html>
