--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
     <script src="./js/classes/AppleManager.js"></script>
     <script src="./js/classes/GameUI.js"></script>
     <script src="./js/data/Collisions.js"></script>
+    <script src="./js/authorization/menu.js"></script>
     <script src="index.js"></script>
     <script defer src="./js/authorization/login.js"></script>
     <script defer src="./js/authorization/registration.js"></script>
     <script defer src="./js/authorization/user.js"></script>
-    <script defer src="./js/authorization/menu.js"></script>
+
     <script defer src="./js/authorization/app.js"></script>
   </body>
 </html>
