--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
     <script src="./js/data/Collisions.js"></script>
     <script src="./js/authorization/menu.js"></script>
     <script src="index.js"></script>
-    <script defer src="./js/authorization/login.js"></script>
+    <!-- <script defer src="./js/authorization/login.js"></script>
     <script defer src="./js/authorization/registration.js"></script>
     <script defer src="./js/authorization/user.js"></script>
-
-    <script defer src="./js/authorization/app.js"></script>
+    <script defer src="./js/authorization/app.js"></script> -->
   </body>
 </html>
